<resources>
    <string name="app_name">Android_Introduction</string>
    <string name="result">Result</string>
    <string name="type_your_name">Type your name...</string>
    <string name="send">SEND</string>
    <string name="hello_name">Hello, %1$s!</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="send_to_result_screen">Send to result screen</string>
    <string name="open_screen_to_get_resul">Open screen to get resul</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
</resources>